@@ -1,2 +1,2 @@
-Simple dungeon generator using x/y coordinate pathing to connect two rooms with corridors throughout the dungeon. File saving and reading is implemented using a series of fseek and fwrite/fread statements designed to ensure that all bytes are properly spaced so that previous over-running writes are written over so that the file does not become corrupted. Hardness values 0 and 255 are reserved and are used for corridors and the edges of the dungeon. Hardness values of 0 not contained within rooms are composed as corridors from and to files. Internally there is also an alternative "path" switch used to identify corridors that may be removed in the future.
+Simple dungeon generator using x/y coordinate pathing to connect two rooms with corridors throughout the dungeon. File saving and reading is implemented using a series of fseek and fwrite/fread statements designed to ensure that all bytes are properly spaced so that previous over-running writes are written over so that the file does not become corrupted. Hardness values 0 and 255 are reserved and are used for corridors and the edges of the dungeon. Hardness values of 0 not contained within rooms are composed as corridors from and to files. Internally there is also an alternative "path" switch used to identify corridors that may be removed in the future. Additionally, a call is made to mkdir() to create the .rlg327/ folder in $HOME should one not exist.
 
